--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dairy-app-empeek",
   "version": "0.1.0",
+  "homepage": "https://barabashlyuda77.github.io/dairy-app",
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
@@ -14,6 +15,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
